fix overflow

--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,7 @@ Dark Gray: #727272;
 html, body {
   height: 100%;
   width: 100%;
+  overflow: hidden;
 }
 body {
     font-family: 'Open Sans', sans-serif;
